calico-policies/public-network-isolation/eu-gb/allow-egress-pods-public.yaml
# This policy opens port 53 and 5353 for DNS,
# port 2049 for communication with NFS file servers, ports 443 and 3260
# for communication to block storage, 10250 for VPN pod, and
# port 2040 and 2041 on 172.21.0.0/24 for the master API server local proxy.

apiVersion: projectcalico.org/v3
kind: GlobalNetworkPolicy
metadata:
  name: allow-egress-pods-public
spec:
  egress:
  - action: Allow
    destination:
      ports:
      - 53
      - 5353
      - 443
      - 2049
      - 3260
      - 10250
    protocol: UDP
    source: {}
  - action: Allow
    destination:
      ports:
      - 53
      - 5353
      - 443
      - 2049
      - 3260
      - 10250
    protocol: TCP
    source: {}
  - action: Allow
    destination:
      ports:
      - 2040:2041
      nets:
      - 172.20.0.0/24
    protocol: UDP
  - action: Allow
    destination:
      ports:
      - 2040:2041
      nets:
      - 172.20.0.0/24
    protocol: TCP
  - action: Allow
    destination:
      nets:
      # Nets for UK South: lon02, lon04, lon05, lon06
      - 141.125.66.26/32
      - 141.125.77.58/32
      - 158.175.65.170/32
      - 158.175.77.178/32
      - 158.175.111.42/32
      - 158.175.125.194
      - 158.176.71.242/32
      - 158.176.94.26/32
      - 158.176.95.146/32
      - 158.176.123.130/32
      - 159.122.224.242/32
      - 159.122.242.78/32
      ports:
      - 20000:32767
    protocol: UDP
    source: {}
  - action: Allow
    destination:
      nets:
      # Nets for UK South: lon02, lon04, lon05, lon06
      - 141.125.66.26/32
      - 141.125.77.58/32
      - 158.175.65.170/32
      - 158.175.77.178/32
      - 158.175.111.42/32
      - 158.175.125.194
      - 158.176.71.242/32
      - 158.176.94.26/32
      - 158.176.95.146/32
      - 158.176.123.130/32
      - 159.122.224.242/32
      - 159.122.242.78/32
      ports:
      - 20000:32767
    protocol: TCP
    source: {}
  order: 1500
  selector: projectcalico.org/orchestrator == 'k8s'
  types:
  - Egress
