calico-policies/public-network-isolation/eu-gb/allow-public-service-endpoint.yaml
# This policy allows outgoing network traffic from worker nodes in each zone of
# your cluster to the cluster master through the public service endpoint. Note
# that you must allow outgoing traffic for all of the zones within the region.

apiVersion: projectcalico.org/v3
kind: GlobalNetworkPolicy
metadata:
  name: allow-public-service-endpoint
spec:
  egress:
  - action: Allow
    destination:
      nets:
      # Nets for UK South: lon02, lon04, lon05, lon06
      - 141.125.77.58/32
      - 158.175.65.170/32
      - 158.175.111.42/32
      - 158.175.125.194
      - 158.176.71.242/32
      - 158.176.94.26/32
      - 158.176.95.146/32
      - 159.122.224.242/32
      - 159.122.242.78/32
      ports:
      - 20000:32767
      - 443
    protocol: UDP
    source: {}
  - action: Allow
    destination:
      nets:
      # Nets for UK South: lon02, lon04, lon05, lon06
      - 141.125.77.58/32
      - 158.175.65.170/32
      - 158.175.111.42/32
      - 158.175.125.194
      - 158.176.71.242/32
      - 158.176.94.26/32
      - 158.176.95.146/32
      - 159.122.224.242/32
      - 159.122.242.78/32
      ports:
      - 20000:32767
      - 443
    protocol: TCP
    source: {}
  order: 1500
  selector: ibm.role == 'worker_public'
  types:
  - Egress
