calico-policies/public-network-isolation/eu-gb/allow-public-services-pods.yaml
# This policy allows outgoing network traffic from pods to other IBM Cloud services.
# The example nets and ports in this policy are for IBM Cloud Container Registry, IBM Cloud
# IBM Cloud Monitoring, IBM Cloud Logs, and the managed Istio add-on.

apiVersion: projectcalico.org/v3
kind: GlobalNetworkPolicy
metadata:
  name: allow-public-services-pods
spec:
  egress:
  - action: Allow
    destination:
      nets:
      # IBM Cloud Container Registry: Global registry
      - 169.60.98.80/29
      - 169.62.37.240/29
      - 169.63.104.232/29
      - 169.47.153.160/28
      - 103.41.69.127/32
      - 103.41.69.114/32
      - 103.41.69.115/32
      # IBM Cloud Container Registry: UK South nets for your own registry
      - 141.125.71.136/29
      - 158.175.97.184/29
      - 158.176.105.64/29
      - 103.41.70.131/32
      - 103.41.70.133/32
      - 103.41.70.134/32
      ports:
      - 443
      - 4443
    protocol: TCP
    source: {}
  - action: Allow
    destination:
      nets:
      # IBM Cloud Monitoring: eu-gb
      # Taken from: https://cloud.ibm.com/docs/monitoring?topic=monitoring-endpoints
      - 158.175.98.206/32
      - 141.125.73.118/32
      - 159.122.210.174/32
      # backup pools IBM Cloud Monitoring: UK South nets
      - 141.125.78.188/32
      - 141.125.78.211/32
      - 158.175.125.163/32
      - 158.175.82.235/32
      - 158.176.135.131/32
      - 158.176.85.107/32
      - 169.62.37.240/29
      ports:
      - 6443
    protocol: TCP
    source: {}
  - action: Allow
    destination:
      nets:
      # IBM Cloud Logs: EU GB nets
      - 141.125.78.186/32
      - 141.125.78.213/32
      - 158.175.125.165/32
      - 158.175.82.238/32
      - 158.176.135.132/32
      - 158.176.135.133/32
      # New IP addresses added on 1/19/2023
      - 158.175.91.91/32
      - 141.125.86.131/32
      - 158.176.142.2/32
      # End new IP address list
       # CIDR Blocks added on 7/26/2023
      - 141.125.139.144/28
      - 141.125.139.160/27
      - 141.125.144.192/26
      - 158.175.167.48/28
      - 158.175.168.32/27
      - 158.176.67.64/26
      - 158.176.89.32/27
      - 161.156.205.0/26
      # End CIDR Blocks
      ports:
      - 443
      - 80
    protocol: TCP
    source: {}
  - action: Allow
    destination:
      ports:
      # Managed Istio add-on: Egress gateway
      - 80
      - 15443
    protocol: TCP
    source: {}
  order: 1800
  selector: projectcalico.org/orchestrator == 'k8s'
  types:
  - Egress
